cluster/apps/downloads/ubuntu/u2-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ubuntu2
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`u2.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: ubuntu-ubuntu-xrdp-tcpport2
          port: 5900
  tls:
    secretName: ${SECRET_CERT}
