cluster/apps/downloads/ubuntu/ubuntu-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ubuntu
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`ubuntu.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: ubuntu-ubuntu-xrdp
          port: 3389
  tls:
    secretName: ${SECRET_CERT}
